--- a/insects.html
+++ b/insects.html
@@ -13,6 +13,24 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
 </head>
 <body>
+   <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+        <div style="background-color:lightpink" class="container-fluid">
+          <a class="navbar-brand" href="insects.html">Interesting Insects</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>  
+          <div style="background-color:skyblue" class="collapse navbar-collapse" id="navbar-toggler">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="basic.html">BaseFile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="advanced.html">AdvancedFile</a>
+              </li>
+            </ul>
+          </div> 
+        </div>
+      </nav>
 <h1>Insects by Tirumani Shivani</h1>
 <div class="container">
     <div class="row">
@@ -38,16 +56,144 @@
     </p>
   </div>
   <div class="container">
-  <img src="termite-500.jpg" class="img-fluid" alt="Termites">
-  <img src="inchworm.jpg" class="img-fluid" alt="Inch worm">
-  <img src="raupe.jpg" class="img-fluid" alt="Raupe">
+  <img src="image3.png" class="img-fluid" alt="Termites">
+  <img src="Image2.png" class="img-fluid" alt="Inch worm">
+  <img src="image1.png" class="img-fluid" alt="Raupe">
   </div>
   <div class = "container"> 
-      <img src="termite-500.jpg" class="img-thumbnail" alt="Termites">
-      <img src="inchworm.jpg" class="img-thumbnail" alt="Inch worm">
-      <img src="raupe.jpg" class="img-thumbnail" alt="Raupe">
+      <img src="image3.png" class="img-thumbnail" alt="Termites">
+      <img src="Image2.png" class="img-thumbnail" alt="Inch worm">
+      <img src="image1.png" class="img-thumbnail" alt="Raupe">
     </div>
-    
+    br>
+       <table class="table table-striped table-bordered table-hover">
+      <caption>My surname letters</caption>
+      <thead class="table-primary">
+      <tr class="table-success">
+        <th scope="col">Letter</th>
+        <th scope="col">Insects</th>
+        <th scope="col">City</th>
+        <th scope="col">River</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="table-danger">
+        <th scope="row">T</th>
+        <td>Terminite</td>
+        <td>Tamilnadu</td>
+        <td>Thames River</td>
+      </tr>
+      <tr class = "table-info">
+        <th scope="row">I</th>
+        <td>Inchworm</td>
+        <td>Indiana</td>
+        <td>Ilinois river </td>
+      </tr>
+      <tr class="table-primary">
+        <th scope="row">R</th>
+        <td>Raupe</td>
+        <td>Rajasthan</td>
+        <td>Rabbit River</td>
+      </tr>
+      <tr class="table-light">
+        <th scope="row">U</th>
+        <td>Underwing</td>
+        <td>Uttarkhand</td>
+        <td>Ugashik River</td>
+      </tr>
+      <tr class="table-primary">
+        <th scope="row">M</th>
+        <td>Mayflies</td>
+        <td>Maldives</td>
+        <td>Macatawa River </td>
+      </tr>
+      <tr class="table-info">
+        <th scope="row">A</th>
+        <td>Antlion</td>
+        <td>Atlanta</td>
+        <td>Alfia</td>
+      </tr>
+    </tbody>
+    </table> 
+    <br>
+    <label>All-Buttons</label>
+    <br>
+    <button class="btn">T</button>
+    <button class="btn">I</button>
+    <button class="btn">R</button>
+    <button class="btn">U</button>
+    <button class="btn">M</button>
+    <button class="btn">A</button>
+    <br>
+    <label>Group Button</label>
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+      <div class="btn-group" role="group" aria-label="group 1">
+        <button type="button" class="btn btn-success">T</button>
+        <button type="button" class="btn btn-success">I</button>
+        <button type="button" class="btn btn-success">R</button>
+      </div>
 
+      <div class="btn-group" role="group" aria-lable="group 2">
+       <button type="button" class="btn btn-warning">U</button>
+       <button type="button" class="btn btn-warning">M</button>
+      </div> 
+      <div class="btn-group" role="group" aria-lable="group 3">
+        <button type="button" class="btn btn-danger">A</button>
+     </div> 
+   </div>
+   <div class="dropdown">
+    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Dropdown button</button>
+     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+       <li><a class="dropdown-item" href="basic.html">Basic</a></li>
+       <li><a class="dropdown-item" href="advanced.html">Advanced</a></li>
+ 
+     </div>
+   </div> 
+   
+  <div class="card-group">
+    <div class="card" style="width: 12rem;">
+      <img src="image3.png" class="card-img-top" alt="Terminite">
+      <div class="card-body">
+        <h5 class="card-title">TERMITES</h5>
+        <p class="card-text"> Termites can reproduce extremely fast, this is the second reason why it’s so hard to get rid of termites for the average homeowner.Some queens can lay several thousand eggs per day, which means a colony is constantly growing.Mature termite nests can have hundreds of thousands or even millions of individuals!As the colony gets larger, it expands its territory. The most mature colonies will produce more than one queen to help with egg-laying duties. Sometimes, to expand territory, additional queens can even be sent far away from the original colony to start a satellite nest.You can see why termites are hard to eradicate from your house once you understand how their reproductive cycle enables them to grow exponentially.But we’ve got one more surprise for you. Here’s the third reason why it’s so hard to get rid of termites
+        </p>
+        <a href="https://fox-pest.com/3-reasons-why-its-hard-to-get-rid-of-termites/" class="btn btn-primary">Termities Indetail</a>
+      </div>
+      </div>
+      <div class="card" style="width: 12rem;">
+        <img src="image2.png" class="card-img-top" alt="Inchworm">
+        <div class="card-body">
+          <h5 class="card-title">Inchworm</h5>
+          <p class="card-text"> Inchworms aren’t worms at all, but caterpillars who have legs at both ends of their bodies and none in the middle. This makes them look odd when they move, shifting first one end and then the other, which has the effect of making them arch their bodies as they go. Some people think that they look a lot like a measuring tape and that’s how they got the nickname inchworm. In fact, another name for these small caterpillars is measuring worms.
+          </p>
+          <a href="https://animals.mom.com/inchworms-kids-8744.html" class="btn btn-primary">Inchworm Indetail</a>
+        </div>
+    </div>
+    <div class="card" style="width: 12rem;">
+      <img src="image1.png" class="card-img-top" alt="Raupe">
+      <div class="card-body">
+        <h5 class="card-title">Raupe</h5>
+        <p class="card-text"> Die Raupe ist das hauptsächlich nahrungsaufnehmende Stadium des Schmetterlings. Schmetterlingsraupen sind überwiegend Pflanzenfresser, es gibt aber Formen, die sich von toter organischer Substanz ernähren, diese kann dann auch tierischen Ursprungs sein. Bei manchen ist dieses Stadium das einzige, in dem sie überhaupt Nahrung zu sich nehmen. Die Falter dieser Arten leben dann nur für die Fortpflanzung und sterben schon bald nach ihrem Schlupf. Dadurch, dass sich das Körpervolumen der Raupen stark vergrößert, müssen sie sich mehrmals häuten, bis sie ihre endgültige Größe erreicht haben. Sie bilden von Zeit zu Zeit eine neue größere Haut, die unter der alten wächst. Zur Häutung schwillt die Raupe an, bis die alte Haut platzt und durch Muskelbewegungen nach hinten weggeschoben werden kann.
+        </p>
+        <a href="https://de.wikipedia.org/wiki/Raupe_(Schmetterling)" class="btn btn-primary">Raupe Indetail</a>
+      </div>
+      </div>
+      </div>
+      <form>
+        <div class="mb-3">
+          <label for="Email1" class="form-label">Email Add</label>
+          <input type="emaiID" class="form-control" id="Email1" aria-describedby="emailHelp">
+          <div id="emailsteps" class="form-text">Email Credentials are confidential.</div>
+        </div>
+        <div class="mb-3">
+          <label for="Emailpassword1" class="form-label">Insect</label>
+          <input type="Insectname" class="form-control" id="Enter your insect name">
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="form-check">
+          <label class="form-check-label" for="exampleCheck1">Signup for Newsletter?</label>
+        </div>
+        <button type="Submit" class="btn btn-primary">Submit</button>
+      </form>   
 </body>
 </html>
