--- a/Advanced.html
+++ b/Advanced.html
@@ -13,5 +13,6 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
 </head>
 <body>
+  <h1>Advanced</h1> 
 </body>
 </html>
