--- a/insects.html
+++ b/insects.html
@@ -118,7 +118,8 @@
     <br>
     <label>All-Buttons</label>
     <br>
-    <button class="btn">T</button>
+    
+    <button class="btn" class="btn btn-success">T</button>
     <button class="btn">I</button>
     <button class="btn">R</button>
     <button class="btn">U</button>
