--- a/insects.html
+++ b/insects.html
@@ -119,7 +119,7 @@
     <label>All-Buttons</label>
     <br>
     
-    <button class="btn" class="btn btn-success">T</button>
+    <button class="btn">T</button>
     <button class="btn">I</button>
     <button class="btn">R</button>
     <button class="btn">U</button>
